--- a/sass/styles.css
+++ b/sass/styles.css
@@ -168,7 +168,7 @@ main .gb-left p {
 
 @media screen and (min-width: 800px) {
   body {
-    background-image: url("../images/bg-Desktop.png");
+    background-image: url("../images/bg-desktop.png");
     background-size: cover;
     background-position-y: 350px;
     background-color: #0c122c;
